--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse navbar-ex1-collapse">
 						<ul>
-							<!-- <li class="active"><a href="index.html">Home</a></li>
-							<li><a href="about.html">Animation</a></li>
+							<li class="active"><a href="index.html">Aliyah's Movies</a></li>
+							<!-- <li><a href="about.html">Animation</a></li>
 							<li><a href="gallery.html">Movies</a></li>
 							<li><a href="blog.html">Movies</a></li>
 							<li><a href="contact.html">Contact</a></li> -->
