--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						<h2>Minions <br> <br> </h2>
 						<img src="http://rihappy.vteximg.com.br/arquivos/sw-minionsWallpaper3.jpg" frameborder="0" width="231" height="169" scrolling="no">
 						<p>NOW PLAYING <br> Minions <br> Minions Movie</p>
-						<a target="_blank" href="https://2.bp.blogspot.com/y6_vzW39GTIEW1L72VhxjIbbTm9UEi8ZC6GMhrFQ_XACv9-z84k6uuaFO7POx2Esu7_88d6MpeE=m22" class="button red"><span>&#xf138;</span>PLAY MOVIE</a>
+						<a target="_blank" href="https://redirector.googlevideo.com/videoplayback?requiressl=yes&id=041ff7d4a8bd9025&itag=22&source=webdrive&app=texmex&ip=2001:19f0:ac00:aee:5400:ff:fe21:4b3d&ipbits=32&expire=1458610490&sparams=requiressl,id,itag,source,ip,ipbits,expire&signature=15D55B553382C919A48E117F19FDE7C415BD1C96.9EB5993B00457A81DB19F6FDD256BD9CBBDBCBED&key=ck2&mm=30&mn=sn-q4fl6n76&ms=nxu&mt=1458596012&mv=u&nh=IgpwcjAzLmRmdzA2KgkxMjcuMC4wLjE&pl=48" class="button red"><span>&#xf138;</span>PLAY MOVIE</a>
 					</div>
 				</div>
 				<div class="col-lg-3 col-sm-4 col-xs-12">
@@ -94,7 +94,7 @@
 						<h2>Home <br> <br> </h2>
 						<img src="https://cisytec.files.wordpress.com/2015/06/image.jpg" frameborder="0" width="231" height="169" scrolling="no">
 						<p>NOW PLAYING <br> Home <br> Home Movie</p>
-						<a target="_blank" href="https://2.bp.blogspot.com/sGjmyUBcbXmAItH_RVOzBPq-v-ePPiWl32Qz26rQXA=m22" class="button red"><span>&#xf138;</span>PLAY MOVIE</a>
+						<a target="_blank" href="https://redirector.googlevideo.com/videoplayback?requiressl=yes&id=ca631d8f6fbe0c4d&itag=22&source=webdrive&app=texmex&ip=2001:19f0:ac00:aee:5400:ff:fe21:4b3d&ipbits=32&expire=1458609975&sparams=requiressl,id,itag,source,ip,ipbits,expire&signature=87C6BA9731F768301226FD024019129727B0E9FE.A062C08A9954F85783ACEA171659E4923E76A174&key=ck2&mm=30&mn=sn-q4f7sn7s&ms=nxu&mt=1458595191&mv=u&nh=IgpwcjAzLmRmdzA2KgkxMjcuMC4wLjE&pl=48" class="button red"><span>&#xf138;</span>PLAY MOVIE</a>
 					</div>
 				</div>
 				<div class="col-lg-3 col-sm-4 col-xs-12">
@@ -102,7 +102,7 @@
 						<h2>Despicable Me 2</h2>
 						<img src="http://www.hdwallpapers.in/walls/2013_despicable_me_2-wide.jpg" frameborder="0" width="231" height="169" scrolling="no">
 						<p>NOW PLAYING <br> Despicable Me <br> Part 2 </p>
-						<a target="_blank" href="https://2.bp.blogspot.com/vnWnLHkdMes1mSrMFQYhsMhEgmq1TTfBLp2KSLGctg=m22" class="button red"><span>&#xf138;</span>PLAY MOVIE</a>
+						<a target="_blank" href="https://redirector.googlevideo.com/videoplayback?requiressl=yes&id=0fc1a7bd8f7ebb96&itag=22&source=webdrive&app=texmex&ip=2001:19f0:ac00:aee:5400:ff:fe21:4b3d&ipbits=32&expire=1458610029&sparams=requiressl,id,itag,source,ip,ipbits,expire&signature=5FE2D7A074BE33A5468FEDE3A35F6B1BDEDD6FF8.CE83D0B217D8CBB884C2E6001D7920954C7F3D6&key=ck2&mm=30&mn=sn-q4fl6n7y&ms=nxu&mt=1458595191&mv=u&nh=IgpwcjAzLmRmdzA2KgkxMjcuMC4wLjE&pl=48" class="button red"><span>&#xf138;</span>PLAY MOVIE</a>
 					</div>
 				</div>
 
@@ -112,7 +112,7 @@
 						<h2>Toy Story  <br> <br> </h2>
 						<img src="http://images6.fanpop.com/image/photos/34500000/Toy-Story-3-toy-story-3-34551437-1920-1200.jpg" frameborder="0" width="231" height="169" scrolling="no">
 						<p>NOW PLAYING <br> Toy Story <br> Part 3</p>
-						<a target="_blank" href="https://2.bp.blogspot.com/Du900YA6neOWxheWfOChB4uNfvPD-hNI6_Hqadh5_A=m22" class="button red"><span>&#xf138;</span>PLAY MOVIE</a>
+						<a target="_blank" href="https://redirector.googlevideo.com/videoplayback?requiressl=yes&id=caf5d022c4a2c11e&itag=22&source=webdrive&app=texmex&ip=2001:19f0:ac00:aee:5400:ff:fe21:4b3d&ipbits=32&expire=1458612644&sparams=requiressl,id,itag,source,ip,ipbits,expire&signature=91DD84597198172DDDDEB6150F63AA0057333E56.F5D201E83CB30CBCE2882F534934C0D570F1982&key=ck2&mm=30&mn=sn-q4f7sner&ms=nxu&mt=1458597502&mv=u&nh=IgpwcjAzLmRmdzA2KgkxMjcuMC4wLjE&pl=48" class="button red"><span>&#xf138;</span>PLAY MOVIE</a>
 					</div>
 				</div>
 
@@ -122,7 +122,7 @@
 						<h2>Barbie <br> <br> </h2>
 						<img src="http://vignette1.wikia.nocookie.net/barbie-movies/images/a/a6/Spy_Squad_Final_Logo.png/revision/latest?cb=20151031015729" frameborder="0" width="231" height="169" scrolling="no">
 						<p>NOW PLAYING <br> Barbie <br> Spy Squad</p>
-						<a target="_blank" href="https://2.bp.blogspot.com/ZgQcHJ6RVj5oCxyaRzvoScfS_Af21OhWVTnMtF-vfQ=m22" class="button red"><span>&#xf138;</span>PLAY MOVIE</a>
+						<a target="_blank" href="https://redirector.googlevideo.com/videoplayback?requiressl=yes&id=e1f18547683c479a&itag=22&source=webdrive&app=texmex&ip=2001:19f0:ac00:aee:5400:ff:fe21:4b3d&ipbits=32&expire=1458610299&sparams=requiressl,id,itag,source,ip,ipbits,expire&signature=32DDEA9A7E47313B02C67ED0E0700853CDB11EAF.3B6371406EB220B3B1B7E88E9BB1723BF10A6013&key=ck2&mm=30&mn=sn-q4fl6n7y&ms=nxu&mt=1458595191&mv=u&nh=IgpwcjAzLmRmdzA2KgkxMjcuMC4wLjE&pl=48" class="button red"><span>&#xf138;</span>PLAY MOVIE</a>
 					</div>
 				</div>
 
@@ -131,7 +131,7 @@
 						<h2>Wall E <br> <br> </h2>
 						<img src="http://orig01.deviantart.net/1798/f/2008/208/1/c/wall_e_version_3_final_by_effectsfilms.jpg" frameborder="0" width="231" height="169" scrolling="no">
 						<p>NOW PLAYING <br> Wall E <br> Wall E Movie </p>
-						<a target="_blank" href="https://2.bp.blogspot.com/hrYP-5CmrBkYWWWmePMp97bvojtQfV7rPcyfu7B6Dw=m22" class="button red"><span>&#xf138;</span>PLAY MOVIE</a>
+						<a target="_blank" href="https://redirector.googlevideo.com/videoplayback?requiressl=yes&id=fb76ebf7bad032a8&itag=22&source=webdrive&app=texmex&ip=2001:19f0:ac00:aee:5400:ff:fe21:4b3d&ipbits=32&expire=1458609503&sparams=requiressl,id,itag,source,ip,ipbits,expire&signature=313BF0C34AC93190FE1BA1366B1C2B23C6AF0BCD.3A2C4778B5DAFD2611992FB6D1795A07469FD2FF&key=ck2&mm=30&mn=sn-q4f7snek&ms=nxu&mt=1458594404&mv=u&nh=IgpwcjAzLmRmdzA2KgkxMjcuMC4wLjE&pl=48" class="button red"><span>&#xf138;</span>PLAY MOVIE</a>
 					</div>
 				</div>
 				
@@ -141,7 +141,7 @@
 						<h2>Inside Out <br> <br> </h2>
 						<img src="http://www.hdwallpapers.in/walls/inside_out_2015_movie-wide.jpg" frameborder="0" width="231" height="169" scrolling="no">
 						<p>NOW PLAYING <br> Inside Out <br> Inside Out Movie</p>
-						<a target="_blank" href="https://2.bp.blogspot.com/NUAZWbaihX8evn21FFj-8Okbv7PJHjUlwYqbWVKfT8UIfHMJFTjkKxSTUJtNC4wHgRch55wtOdio=m22" class="button red"><span>&#xf138;</span>PLAY MOVIE</a>
+						<a target="_blank" href="https://redirector.googlevideo.com/videoplayback?requiressl=yes&id=e46df1e16b4df8a0&itag=22&source=webdrive&app=texmex&ip=2001:19f0:ac00:aee:5400:ff:fe21:4b3d&ipbits=32&expire=1458608899&sparams=requiressl,id,itag,source,ip,ipbits,expire&signature=BA948938D2D8E945E4804A62AAACD7B8698384B1.69C997A4F5DB1EE6D1ECC9B3D1A2B4FE6880400A&key=ck2&mm=30&mn=sn-q4f7sn7e&ms=nxu&mt=1458594404&mv=u&nh=IgpwcjAzLmRmdzA2KgkxMjcuMC4wLjE&pl=48" class="button red"><span>&#xf138;</span>PLAY MOVIE</a>
 					</div>
 				</div>
 
