--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 					<div id="col-yellow">
 						<h2>Shugo Chara  <br> </h2>
-						<img src="http://vignette1.wikia.nocookie.net/magical-girl-mahou-shoujo/images/4/4f/Shugo_chara_render_i_by_melo91.png/revision/latest?cb=20150922144619" frameborder="0" scrolling="no">
+						<img src="http://img12.deviantart.net/e435/i/2015/106/4/1/shugo_chara_render_by_ibreatheagain-d7qe2q7.png" frameborder="0" scrolling="no">
 						<p>NOW PLAYING <br> Shugo Chara <br> 1 </p>
 						<a target="_blank" href="https://lh3.googleusercontent.com/2j0ao-dJWxUFNpa9ut_2_9Jh-srVF0SnlqKJljWf3TdYzRlFfbpvYbEnaswPkP0-rzqz=m18" class="button red"><span>&#xf138;</span>PLAY MOVIE</a>
 					</div>
