--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 					<div class="collapse navbar-collapse navbar-ex1-collapse">
 						<ul>
 							<li class="active"><a href="index.html">Aliyah's Anime</a></li>
-							<!-- <li><a href="about.html">Animation</a></li>
-							<li><a href="gallery.html">Movies</a></li>
+							<li><a href="about.html">Anime Shows</a></li>
+							<!-- <li><a href="gallery.html">Movies</a></li>
 							<li><a href="blog.html">Movies</a></li>
 							<li><a href="contact.html">Contact</a></li> -->
 						</ul>
@@ -96,7 +96,7 @@
 						<h2>Bleach</h2>
 						<img src="http://pre04.deviantart.net/6cb3/th/pre/f/2013/220/a/a/render_bleach_by_marina_senju-d6ha80x.png" frameborder="0" scrolling="no">
 						<p>NOW PLAYING <br> Bleach <br> 271 </p>
-						<a target="_blank" href="https://lh3.googleusercontent.com/EkjOY19iGodoO8cWiAgAG2N8vsO9HhKaQjgqlRk5IEv4EozSeUXzWmoI66bM_J9WGJs=m22" class="button red"><span>&#xf138;</span>PLAY MOVIE</a>
+						<a target="_blank" href="https://lh3.googleusercontent.com/EkjOY19iGodoO8cWiAgAG2N8vsO9HhKaQjgqlRk5IEv4EozSeUXzWmoI66bM_J9WGJs=m22" class="button red"><span>&#xf138;</span>PLAY </a>
 					</div>
 					<!-- thatanime.net -->
 				
@@ -105,7 +105,7 @@
 						<h2>Shugo Chara  <br> </h2>
 						<img src="http://img12.deviantart.net/e435/i/2015/106/4/1/shugo_chara_render_by_ibreatheagain-d7qe2q7.png" frameborder="0" scrolling="no">
 						<p>NOW PLAYING <br> Shugo Chara <br> 1 </p>
-						<a target="_blank" href="https://lh3.googleusercontent.com/2j0ao-dJWxUFNpa9ut_2_9Jh-srVF0SnlqKJljWf3TdYzRlFfbpvYbEnaswPkP0-rzqz=m18" class="button red"><span>&#xf138;</span>PLAY MOVIE</a>
+						<a target="_blank" href="https://lh3.googleusercontent.com/2j0ao-dJWxUFNpa9ut_2_9Jh-srVF0SnlqKJljWf3TdYzRlFfbpvYbEnaswPkP0-rzqz=m18" class="button red"><span>&#xf138;</span>PLAY </a>
 					</div>
 				  <!-- gogoanime.io -->
 
